Add session security management
